chore: add .cache/plugin/privacy/assets/external to .gitignore

--- a/course/hu/custom.css
+++ b/course/hu/custom.css
@@ -204,6 +204,7 @@ a:hover {
 .md-typeset ol {
     counter-reset: ol-counter;
     padding-left: 0;
+    list-style: none;
 }
 
 .md-typeset ol > li {
